Accessible location change events need to update internal data structure

In http://crrev.com/377045 (http://crbug.com/588889), we tried to fire
fewer Android events when objects change location. While this achieved
its desired goal, it sometimes didn't update the internal data
structure with the new locations, leading to the location updates
containing stale data.

This change refactors the code so that the internal data structure is
always updated first, then a second function is called to send events,
which can be deferred on Android.

BUG=602739,588889

Review URL: https://codereview.chromium.org/1884723003

Cr-Commit-Position: refs/heads/master@{#387488}

Former-commit-id: 8196ad3aa5a432169904cb72d57d760719df3e4a